--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -463,3 +463,16 @@
     min-height: 100px;
   }
 }
+.div-3-h3 {
+  position: relative;
+  z-index: 44;
+  width: 184px;
+  height: 116px;
+  font-family: "Forum";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 58px;
+  text-align: center;
+  color: #0c0b10;
+}
