--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -1,3 +1,7 @@
+button {
+  cursor: pointer;
+}
+
 .BgTop {
   display: block;
   width: 99vw;
@@ -229,7 +233,7 @@
   .second {
     width: 100%;
     height: 612.22px;
-    bottom: 0px;
+    bottom: -115px;
     position: absolute;
   }
   .Places {
@@ -247,16 +251,16 @@
   }
   .Mountains {
     width: 100%;
-    height: 596px;
-    bottom: -113px;
+
+    bottom: -200px;
     position: absolute;
-    z-index: 5;
+    z-index: 4;
   }
   .Gradient {
     width: 100%;
-    height: 540px;
-    left: 0px;
-    bottom: -113px;
+    height: 350px;
+    left: 0;
+    bottom: 0;
     position: absolute;
     background: linear-gradient(
       180deg,
@@ -278,11 +282,11 @@
 }
 
 .BgMid {
-  position: relative;
   display: block;
   width: 99vw;
   height: 100vh;
   position: relative;
+  z-index: 6;
   .BgMaskMid {
     display: block;
     width: 100%;
@@ -463,16 +467,45 @@
     min-height: 100px;
   }
 }
-.div-3-h3 {
-  position: relative;
-  z-index: 44;
-  width: 184px;
-  height: 116px;
-  font-family: "Forum";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 60px;
-  line-height: 58px;
-  text-align: center;
-  color: #0c0b10;
+.wrapper-h3 {
+  margin: 800px 0 30px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  .div-3-h3 {
+    position: relative;
+    z-index: 44;
+    width: 184px;
+    height: 116px;
+    font-family: "Forum";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 58px;
+    text-align: center;
+    color: #0c0b10;
+  }
+}
+
+.Cards-div-3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 40px;
+  img {
+    z-index: 44;
+    position: relative;
+    width: 540px;
+    height: 191px;
+    border-radius: 10px;
+  }
+  .left-cards-3,
+  .right-cards-3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    row-gap: 40px;
+  }
 }
