--- a/src/pages/Book/book.scss
+++ b/src/pages/Book/book.scss
@@ -1,202 +1,196 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #e2d3ce;
-  font-family: "Forum", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-h1 {
-  font-weight: 400;
-  font-size: 60px;
-  text-align: center;
-  margin-top: 20px;
-}
-
 .bookPage {
-  background-image: url(/header.png);
-  padding-top: 50px;
-  height: 400px;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+  .header-img {
+    width: 100%;
+    position: relative;
+  }
+  .BgMaskMid {
+    display: block;
+    width: 100%;
+    height: 1041vh;
+    left: 0;
+    top: 0;
+    position: absolute;
+    background: #e2d3ce;
+  }
 
-.items {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 50px;
-}
+  .center-mid-div {
+    .wrapper-h3 {
+      margin: 800px 0 30px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      .div-3-h3 {
+        position: relative;
+        z-index: 44;
+        width: 184px;
+        height: 116px;
+        font-family: "Forum";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 60px;
+        line-height: 58px;
+        text-align: center;
+        color: #0c0b10;
+      }
+    }
+    .Cards-div-3 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      column-gap: 40px;
+      img {
+        z-index: 44;
+        position: relative;
+        width: 540px;
+        height: 191px;
+        border-radius: 10px;
+      }
+      .left-cards-3,
+      .right-cards-3 {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        row-gap: 40px;
+        .card-item {
+          background: #ffffff;
+          border: 0;
+          border-radius: 10px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          position: relative;
+          z-index: 18;
+          width: 540px;
+          height: 200px;
+          .card-p-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            position: relative;
+            z-index: 18;
+            p {
+              position: relative;
+              z-index: 19;
+              font-family: "Manrope";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 18px;
+              line-height: 36px;
+              text-align: center;
+              color: #000000;
+              width: 410px;
+            }
+            button {
+              position: relative;
+              z-index: 19;
+              font-family: "Forum";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 22px;
+              line-height: 26px;
+              text-align: center;
+              letter-spacing: 0.04em;
+              text-transform: uppercase;
+              color: #ffffff;
+              width: 240px;
+              height: 55px;
+              background: #0c0b10;
+              border-radius: 74px;
+              border: 0;
+            }
+          }
+        }
+      }
+    }
+  }
 
-.item {
-  width: 540px;
-  height: 450px;
-  background-color: #ffff;
-  border-radius: 15px;
-}
-
-.container {
-  max-width: 1100px;
-  margin: auto;
-  text-align: center;
-}
-
-.text {
-  width: 410px;
-  margin-left: 15%;
-  font-size: 20px;
-  margin-top: 20px;
-}
-
-.req {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  width: 254px;
-  margin-top: 20px;
-}
-
-.call {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-li {
-  list-style: none;
-}
-
-.menu {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1400px;
-  margin: auto;
-}
-
-nav {
-  display: flex;
-  margin-top: 30px;
-}
-
-.email {
-  background-image: url(/form-img.png);
-  border-radius: 10px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-left: 25px;
-  height: 565px;
-  padding-top: 50px;
-  margin-top: 100px;
-}
-
-.all {
-  margin-left: 40px;
-}
-
-.marg {
-  margin-left: 40px;
-}
-
-.inspirit {
-  width: 520px;
-  color: #ffff;
-  font-weight: 200;
-  font-size: 60px;
-  text-align: left;
-  margin-left: 16%;
-}
-
-.sub {
-  border: none;
-  background-color: transparent;
-  width: 200px;
-  margin-left: 125px;
-  height: 55px;
-  margin-right: -325px;
-  background-color: white;
-  border-radius: 10px;
-  font-family: "Forum", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-form {
-  display: inline-block;
-  width: 730px;
-  height: 55px;
-  background: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(8px);
-  border-radius: 10px;
-  margin-top: 80px;
-}
-
-.sign {
-  color: white;
-  font-weight: 200;
-  margin-right: 45%;
-  margin-top: 20px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-input {
-  width: 300px;
-  height: 40px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-  margin-left: -220px;
-  color: black;
-  font-size: 16px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-input::placeholder {
-  color: black;
-}
-
-.footer {
-  background-image: url(/footer.png);
-  height: 800px;
-  width: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  text-align: center;
-  margin-top: 200px;
-}
-
-.logoFoot {
-  height: 112px;
-}
-
-.footer nav {
-  justify-content: center;
-  margin-top: 200px;
-}
-
-.callBack {
-  margin-top: -20px;
-}
-
-.lastItems {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 350px;
-  color: white;
-}
-
-.rights {
-  font-family: "Manrope", sans-serif;
-  font-weight: 200;
-  font-style: normal;
+  // .group-620-div {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   position: relative;
+  //   z-index: 16;
+  //   top: -730px;
+  //   .group-620-div-form {
+  //     display: flex;
+  //     align-items: flex-start;
+  //     justify-content: center;
+  //     flex-direction: column;
+  //     position: absolute;
+  //     top: 90px;
+  //     z-index: 17;
+  //     h2 {
+  //       width: 520px;
+  //       font-family: "Forum";
+  //       font-style: normal;
+  //       font-weight: 400;
+  //       font-size: 60px;
+  //       line-height: 58px;
+  //       color: #ffffff;
+  //     }
+  //     p {
+  //       margin-top: 15px;
+  //       font-family: "Manrope";
+  //       font-style: normal;
+  //       font-weight: 400;
+  //       font-size: 16px;
+  //       line-height: 179.8%;
+  //       color: #ffffff;
+  //       margin-bottom: 60px;
+  //     }
+  //     .email-space {
+  //       position: relative;
+  //       display: flex;
+  //       align-items: center;
+  //       justify-content: center;
+  //       input {
+  //         background: rgba(255, 255, 255, 0.14);
+  //         padding: 13px 30px;
+  //         border: 1px solid #ffffff;
+  //         backdrop-filter: blur(10px);
+  //         border-radius: 95px;
+  //         width: 460px;
+  //         height: 45px;
+  //         font-family: "Manrope";
+  //         font-style: normal;
+  //         font-weight: 400;
+  //         font-size: 16px;
+  //         line-height: 179.8%;
+  //         color: #0c0b10;
+  //         margin: 0;
+  //       }
+  //       input::placeholder {
+  //         font-family: "Manrope";
+  //         font-style: normal;
+  //         font-weight: 400;
+  //         font-size: 16px;
+  //         line-height: 179.8%;
+  //         color: #0c0b10;
+  //       }
+  //       button {
+  //         position: relative;
+  //         right: 40px;
+  //         border: 0;
+  //         padding: 14px 108px 12px;
+  //         background: #ffffff;
+  //         border-radius: 74px;
+  //         font-family: "Forum";
+  //         font-style: normal;
+  //         font-weight: 400;
+  //         font-size: 24px;
+  //         line-height: 18px;
+  //         text-align: center;
+  //         letter-spacing: 0.04em;
+  //         text-transform: uppercase;
+  //         color: #0c0b10;
+  //         height: 45px;
+  //       }
+  //     }
+  //   }
+  // }
 }
