--- a/src/stylesDefault/App.scss
+++ b/src/stylesDefault/App.scss
@@ -5,3 +5,9 @@
   font-weight: 400;
   font-style: normal;
 }
+.app {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
