--- a/src/pages/Book/book.scss
+++ b/src/pages/Book/book.scss
@@ -1,30 +1,39 @@
 .bookPage {
   .header-img {
     width: 100%;
-    position: relative;
+    position: absolute;
+    z-index: 1;
   }
   .BgMaskMid {
     display: block;
     width: 100%;
-    height: 1041vh;
+    height: 170%;
     left: 0;
     top: 0;
     position: absolute;
     background: #e2d3ce;
   }
-
+  .empty-div {
+    padding: 10px 13px;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 99%;
+    min-height: 80.56px;
+    position: relative;
+    z-index: 4;
+  }
   .center-mid-div {
+    position: relative;
     .wrapper-h3 {
-      margin: 800px 0 30px;
+      margin: 0px 0 30px;
       width: 100%;
       display: flex;
       align-items: center;
       justify-content: space-evenly;
       .div-3-h3 {
-        position: relative;
-        z-index: 44;
-        width: 184px;
-        height: 116px;
+        height: 71px;
         font-family: "Forum";
         font-style: normal;
         font-weight: 400;
@@ -32,6 +41,8 @@
         line-height: 58px;
         text-align: center;
         color: #0c0b10;
+        position: relative;
+        z-index: 17;
       }
     }
     .Cards-div-3 {
@@ -53,7 +64,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        row-gap: 40px;
+        row-gap: 30px;
         .card-item {
           background: #ffffff;
           border: 0;
@@ -65,13 +76,15 @@
           position: relative;
           z-index: 18;
           width: 540px;
-          height: 200px;
+          row-gap: 30px;
+          padding: 0 65px 50px 65px;
           .card-p-button {
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
             position: relative;
+            row-gap: 25px;
             z-index: 18;
             p {
               position: relative;
@@ -109,88 +122,88 @@
     }
   }
 
-  // .group-620-div {
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   position: relative;
-  //   z-index: 16;
-  //   top: -730px;
-  //   .group-620-div-form {
-  //     display: flex;
-  //     align-items: flex-start;
-  //     justify-content: center;
-  //     flex-direction: column;
-  //     position: absolute;
-  //     top: 90px;
-  //     z-index: 17;
-  //     h2 {
-  //       width: 520px;
-  //       font-family: "Forum";
-  //       font-style: normal;
-  //       font-weight: 400;
-  //       font-size: 60px;
-  //       line-height: 58px;
-  //       color: #ffffff;
-  //     }
-  //     p {
-  //       margin-top: 15px;
-  //       font-family: "Manrope";
-  //       font-style: normal;
-  //       font-weight: 400;
-  //       font-size: 16px;
-  //       line-height: 179.8%;
-  //       color: #ffffff;
-  //       margin-bottom: 60px;
-  //     }
-  //     .email-space {
-  //       position: relative;
-  //       display: flex;
-  //       align-items: center;
-  //       justify-content: center;
-  //       input {
-  //         background: rgba(255, 255, 255, 0.14);
-  //         padding: 13px 30px;
-  //         border: 1px solid #ffffff;
-  //         backdrop-filter: blur(10px);
-  //         border-radius: 95px;
-  //         width: 460px;
-  //         height: 45px;
-  //         font-family: "Manrope";
-  //         font-style: normal;
-  //         font-weight: 400;
-  //         font-size: 16px;
-  //         line-height: 179.8%;
-  //         color: #0c0b10;
-  //         margin: 0;
-  //       }
-  //       input::placeholder {
-  //         font-family: "Manrope";
-  //         font-style: normal;
-  //         font-weight: 400;
-  //         font-size: 16px;
-  //         line-height: 179.8%;
-  //         color: #0c0b10;
-  //       }
-  //       button {
-  //         position: relative;
-  //         right: 40px;
-  //         border: 0;
-  //         padding: 14px 108px 12px;
-  //         background: #ffffff;
-  //         border-radius: 74px;
-  //         font-family: "Forum";
-  //         font-style: normal;
-  //         font-weight: 400;
-  //         font-size: 24px;
-  //         line-height: 18px;
-  //         text-align: center;
-  //         letter-spacing: 0.04em;
-  //         text-transform: uppercase;
-  //         color: #0c0b10;
-  //         height: 45px;
-  //       }
-  //     }
-  //   }
-  // }
+  .group-620-div {
+    margin-top: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 16;
+    .group-620-div-form {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      position: absolute;
+      top: 90px;
+      z-index: 17;
+      h2 {
+        width: 520px;
+        font-family: "Forum";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 60px;
+        line-height: 58px;
+        color: #ffffff;
+      }
+      p {
+        margin-top: 15px;
+        font-family: "Manrope";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 179.8%;
+        color: #ffffff;
+        margin-bottom: 60px;
+      }
+      .email-space {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        input {
+          background: rgba(255, 255, 255, 0.14);
+          padding: 13px 30px;
+          border: 1px solid #ffffff;
+          backdrop-filter: blur(10px);
+          border-radius: 95px;
+          width: 460px;
+          height: 45px;
+          font-family: "Manrope";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 179.8%;
+          color: #0c0b10;
+          margin: 0;
+        }
+        input::placeholder {
+          font-family: "Manrope";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 179.8%;
+          color: #0c0b10;
+        }
+        button {
+          position: relative;
+          right: 40px;
+          border: 0;
+          padding: 14px 108px 12px;
+          background: #ffffff;
+          border-radius: 74px;
+          font-family: "Forum";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 24px;
+          line-height: 18px;
+          text-align: center;
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+          color: #0c0b10;
+          height: 45px;
+        }
+      }
+    }
+  }
 }
