--- a/src/pages/HomePage/homePage.scss
+++ b/src/pages/HomePage/homePage.scss
@@ -243,7 +243,7 @@ button {
   .BgMaskMid {
     display: block;
     width: 100%;
-    height: 1041vh;
+    height: 100%;
     left: 0;
     top: 0;
     position: absolute;
