--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,17 +1,19 @@
 header {
-  display: block;
   width: 100%;
   position: absolute;
   z-index: 17;
+  display: flex !important;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   .navigation {
     cursor: pointer;
     padding: 10px 13px;
     display: inline-flex;
+    width: 100%;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 99%;
-    min-height: 80.56px;
     position: relative;
     z-index: 4;
     .Menu {
